# source

./: README.md  lib.rar  main.rar
lib/: ble_service.dart  gmaps_nav_parser.dart  main.dart  nav_sync_service.dart  navigation_ble.dart  notification_handler.dart  user_profile_settings.dart
lib/screens/: about_screen.dart  dashboard_screen.dart  gps_tracker_screen.dart  health_screen.dart  ota_screen.dart  quick_replies_screen.dart  workout_screen.dart
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_config.h  idf_component.yml
main/assets/: angle_icon.c  arrow_1.c  arrow_2.c  bat_icon.c  ble.c  font_12.c  font_14.c  font_16.c  font_20.c  font_24.c  font_36.c  font_48.c  language_icon.c  menu_icon.c  menu_icon_2.c  signal_icon.c  sub_icon.c  wifi_16.c  wifi_24.c  workout_health_icon.c
main/bluetooth/: ble_notify.c  ble_notify.h
main/drivers/: vibration_motor.c  vibration_motor.h
main/network/: net_state.c  net_state.h  ota_service.c  ota_service.h
main/sensors/: battery_max17048.c  battery_max17048.h  bmi270_config.h  gps_nmea.c  gps_nmea.h  hr_max30102.c  hr_max30102.h  hw_monitor.c  hw_monitor.h  imu_bmi270.c  imu_bmi270.h  sensors.c  sensors.h
main/services/: watch_activity_log.c  watch_activity_log.h  watch_settings.c  watch_settings.h
main/ui/: ui.c  ui.h  ui_alarm.c  ui_apps.c  ui_connect.c  ui_health.c  ui_icons.c  ui_icons.h  ui_menu.c  ui_nav.c  ui_nav.h  ui_notif_popup.c  ui_notif_popup.h  ui_screens.h  ui_shutdown_dialog.c  ui_shutdown_dialog.h  ui_stopwatch.c  ui_update.c  ui_utils.c  ui_utils.h  ui_watchface.c  ui_wifi.c
