idf_component_register(
    SRCS
        "app_main.c"
        "bluetooth/ble_notify.c"
        "drivers/vibration_motor.c"
        "network/net_state.c"
        "network/ota_service.c"
        "services/watch_settings.c"
        "services/watch_activity_log.c"
        "sensors/battery_max17048.c"
        "sensors/imu_bmi270.c"
        "sensors/hr_max30102.c"
        "sensors/gps_nmea.c"
        "sensors/hw_monitor.c"
        "sensors/sensors.c"
        "ui/ui.c"
        "ui/ui_alarm.c"
        "ui/ui_apps.c"
        "ui/ui_connect.c"
        "ui/ui_health.c"
        "ui/ui_icons.c"
        "ui/ui_menu.c"
        "ui/ui_nav.c"
        "ui/ui_notif_popup.c"
        "ui/ui_shutdown_dialog.c"
        "ui/ui_stopwatch.c"
        "ui/ui_update.c"
        "ui/ui_utils.c"
        "ui/ui_watchface.c"
        "ui/ui_wifi.c"
        "assets/angle_icon.c"
        "assets/arrow_1.c"
        "assets/arrow_2.c"
        "assets/bat_icon.c"
        "assets/ble.c"
        "assets/font_12.c"
        "assets/font_14.c"
        "assets/font_16.c"
        "assets/font_20.c"
        "assets/font_24.c"
        "assets/font_36.c"
        "assets/font_48.c"
        "assets/language_icon.c"
        "assets/menu_icon.c"
        "assets/menu_icon_2.c"
        "assets/signal_icon.c"
        "assets/sub_icon.c"
        "assets/wifi_16.c"
        "assets/wifi_24.c"
        "assets/workout_health_icon.c"
    INCLUDE_DIRS
        "."
        "bluetooth"
        "drivers"
        "network"
        "services"
        "sensors"
        "ui"
        "assets"
    REQUIRES
        "bt"
        "nvs_flash"
        "driver"
        "esp_https_ota"
        "esp_http_client"
        "app_update"
        "mbedtls"
)
